--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "axios": "^1.7.9",
+    "emailjs-com": "^3.2.0",
+    "node": "^22.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
